# stm32-spa

./: README.md  ci.sh  justfile
.github/workflows/: ci.yml
c0/macros/: Cargo.toml
c0/macros/src/: lib.rs
c0/model/: Cargo.toml
c0/model/src/: gpio.rs  lib.rs  main.rs  rcc.rs
c0/model/src/rcc/: ahbenr.rs  iopenr.rs
g4/: Cargo.toml  build.rs
g4-interrupts/: Cargo.toml
g4-interrupts/src/: lib.rs
g4/macros/: Cargo.toml
g4/macros/src/: lib.rs
g4/model/: Cargo.toml
g4/model/src/: cordic.rs  crc.rs  dma.rs  dmamux.rs  exti.rs  gpio.rs  lib.rs  main.rs  rcc.rs  syscfg.rs  vrefbuf.rs
g4/model/src/cordic/: csr.rs  rdata.rs  wdata.rs
g4/model/src/cordic/csr/: argsize.rs  dmaren.rs  dmawen.rs  func.rs  ien.rs  nargs.rs  nres.rs  precision.rs  ressize.rs  rrdy.rs  scale.rs
g4/model/src/cordic/rdata/: res.rs  res0.rs  res1.rs
g4/model/src/cordic/wdata/: arg.rs  arg0.rs  arg1.rs
g4/model/src/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
g4/model/src/crc/cr/: polysize.rs  rev_in.rs  rev_out.rs  rst.rs
g4/model/src/dma/: ccr.rs  cmar.rs  cndtr.rs  cpar.rs  ifcr.rs  isr.rs
g4/model/src/dma/ccr/: circ.rs  dir.rs  en.rs  htie.rs  mem2mem.rs  minc.rs  msize.rs  pinc.rs  pl.rs  psize.rs  tcie.rs  teie.rs
g4/model/src/dma/cmar/: ma16.rs  ma32.rs  ma8.rs
g4/model/src/dma/cndtr/: ndt.rs
g4/model/src/dma/cpar/: pa16.rs  pa32.rs  pa8.rs
g4/model/src/dma/ifcr/: cgif.rs  chtif.rs  ctcif.rs  cteif.rs
g4/model/src/dma/isr/: gif.rs  htif.rs  tcif.rs  teif.rs
g4/model/src/dmamux/: ccr.rs  cfr.rs  csr.rs  cxcr.rs  rgcfr.rs  rgcr.rs  rgsr.rs  rgxcr.rs
g4/model/src/dmamux/ccr/: dmareq.rs  ege.rs  nbreq.rs  se.rs  soie.rs  spol.rs  sync_id.rs
g4/model/src/dmamux/cxcr/: dmareq.rs
g4/model/src/dmamux/rgcr/: ge.rs  gnbreq.rs  gpol.rs  oie.rs  sig_id.rs
g4/model/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs
g4/model/src/exti/emr/: em.rs
g4/model/src/exti/ftsr/: ft.rs
g4/model/src/exti/imr/: im.rs
g4/model/src/exti/pr/: pif.rs
g4/model/src/exti/rtsr/: rt.rs
g4/model/src/gpio/: afr.rs  idr.rs  moder.rs  odr.rs  ospeedr.rs  otyper.rs  pupdr.rs
g4/model/src/gpio/afr/: afsel.rs
g4/model/src/gpio/idr/: id.rs
g4/model/src/gpio/moder/: mode.rs
g4/model/src/gpio/odr/: od.rs
g4/model/src/gpio/ospeedr/: ospeed.rs
g4/model/src/gpio/otyper/: ot.rs
g4/model/src/gpio/pupdr/: pupd.rs
g4/model/src/rcc/: ahb1enr.rs  ahb2enr.rs  apb2enr.rs  enr.rs
g4/model/src/rcc/enr/: ahb1.rs  ahb2.rs  apb2.rs
g4/model/src/syscfg/: exticr.rs
g4/model/src/syscfg/exticr/: exti.rs
g4/model/src/vrefbuf/: csr.rs
g4/model/src/vrefbuf/csr/: envr.rs  hiz.rs  vrr.rs  vrs.rs
g4/scope/: Cargo.toml
g4/scope/recordings/: exti.rrd
g4/scope/src/: main.rs
g4/src/: lib.rs
g4/src/common/: cordic.rs  exti.rs  gpio.rs  rcc.rs  syscfg.rs
g4/tests/: cordic.rs  gpio.rs
interrupts/: Cargo.toml
interrupts/src/: g4.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
model/: Cargo.toml
model/src/: devices.rs  lib.rs  main.rs
model/src/devices/: c0.rs  g4.rs
model/src/devices/c0/: gpio.rs  rcc.rs
model/src/devices/c0/rcc/: ahbenr.rs  iopenr.rs
model/src/devices/g4/: cordic.rs  crc.rs  dma.rs  dmamux.rs  exti.rs  gpio.rs  rcc.rs  syscfg.rs  vrefbuf.rs
model/src/devices/g4/cordic/: csr.rs  rdata.rs  wdata.rs
model/src/devices/g4/cordic/csr/: argsize.rs  dmawen.rs  ien.rs  nargs.rs  nres.rs  precision.rs  ressize.rs  rrdy.rs  scale.rs
model/src/devices/g4/cordic/rdata/: res0.rs  res1.rs
model/src/devices/g4/cordic/wdata/: arg.rs  arg1.rs
model/src/devices/g4/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
model/src/devices/g4/crc/cr/: rev_in.rs  rev_out.rs  rst.rs
model/src/devices/g4/dma/: cmar.rs  cndtr.rs  cpar.rs
model/src/devices/g4/dma/ccr/: circ.rs  dir.rs  en.rs  htie.rs  mem2mem.rs  minc.rs  msize.rs  pinc.rs  pl.rs  psize.rs  tcie.rs  teie.rs
model/src/devices/g4/dma/cmar/: ma16.rs  ma32.rs  ma8.rs
model/src/devices/g4/dma/cndtr/: ndt.rs
model/src/devices/g4/dma/cpar/: pa16.rs  pa32.rs  pa8.rs
model/src/devices/g4/dma/ifcr/: ctcif.rs
model/src/devices/g4/dma/isr/: teif.rs
model/src/devices/g4/dmamux/: ccr.rs  csr.rs  rgcfr.rs  rgcr.rs
model/src/devices/g4/dmamux/ccr/: dmareq.rs  ege.rs  nbreq.rs  spol.rs  sync_id.rs
model/src/devices/g4/dmamux/rgcr/: ge.rs  gnbreq.rs  gpol.rs  oie.rs  sig_id.rs
model/src/devices/g4/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs
model/src/devices/g4/exti/emr/: em.rs
model/src/devices/g4/exti/ftsr/: ft.rs
model/src/devices/g4/exti/pr/: pif.rs
model/src/devices/g4/rcc/: ahb1enr.rs  ahb2enr.rs  apb2enr.rs
model/src/devices/g4/syscfg/: exticr.rs
model/src/devices/g4/syscfg/exticr/: exti.rs
model/src/devices/g4/vrefbuf/: csr.rs
model/src/devices/g4/vrefbuf/csr/: envr.rs  vrs.rs
model/src/peripherals/: gpio.rs  prelude.rs
model/src/peripherals/gpio/: afr.rs  idr.rs  moder.rs  odr.rs  ospeedr.rs  otyper.rs  pupdr.rs
model/src/peripherals/rcc/: enr.rs
peripherals/: Cargo.toml
peripherals/src/: gpio.rs  lib.rs  prelude.rs
peripherals/src/gpio/: afr.rs  ospeedr.rs  otyper.rs  pupdr.rs
peripherals/src/rcc/: enr.rs
peripherals/src/rcc/enr/: ahb1.rs
tests/c0/: Cargo.toml  memory.x  rust-toolchain.toml
tests/c0/tests/: gpio.rs
tests/g4/: Cargo.toml  rust-toolchain.toml
tests/g4/.cargo/: config.toml
tests/g4/examples/: waves.rs
tests/g4/tests/: cordic.rs  crc.rs  dma.rs  exti.rs  gpio.rs
