[package]
name = "stm32-spa-macros"
version = "0.1.0"
edition = "2024"

[dependencies]
model = { package = "stm32-spa-model", path = "../model" }
proto-hal-build = { git = "https://github.com/adinack/proto-hal", features = ["macros"] }
proto-hal-macros = { git = "https://github.com/adinack/proto-hal" }


[lib]
proc-macro = true

[features]
c092 = []
g431 = []
g441 = []
g474 = []
g484 = []
