[package]
name = "stm32-spa-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
model = { package = "stm32-spa-model", path = "../model" }
proto-hal-build = { git = "https://github.com/adinack/proto-hal", features = ["macros"], default-features = false }
proto-hal-macros = { git = "https://github.com/adinack/proto-hal" }


[lib]
proc-macro = true

[features]
c092 = []
g431 = []
g441 = []
g474 = []
g484 = []

# inject local crates for tests
[patch."https://github.com/adinack/proto-hal"]
proto-hal = { path = "/Users/adinackerman/Documents/GitHub/proto-hal/proto-hal" }
proto-hal-build = { path = "/Users/adinackerman/Documents/GitHub/proto-hal/build" }
proto-hal-model = { path = "/Users/adinackerman/Documents/GitHub/proto-hal/model" }
proto-hal-macros = { path = "/Users/adinackerman/Documents/GitHub/proto-hal/macros" }
