[package]
name = "c0-tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
defmt-test = "0.3.2"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
proto-hal = { git = "https://github.com/adinack/proto-hal" }
stm32-spa = { path = "../../out", features = ["c092"] }

[[test]]
name = "gpio"
harness = false
